day03/fakeapi-ing.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fakeapi-ing
  namespace: myns
spec:
  ingressClassName: nginx
  rules:
  - host: api-188.166.206.98.nip.io
    http:
      paths:
        - path: /v1
          pathType: Prefix
          backend:
            service:
              name: v1-fakeapi-svc
              port:
                number: 3000
        - path: /v2
          pathType: Prefix
          backend:
            service:
              name: v2-fakeapi-svc
              port:
                number: 3000
